--- a/diary.html
+++ b/diary.html
@@ -6,13 +6,14 @@
     <title>다이어리 과제 윤준수</title>
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/diary.css" />
-    <script src="./diary.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js"></script>
+    <script src="./modules/diary.js" defer></script>
   </head>
   <body>
     <header class="container-layout"><h1>준수의 다이어리</h1></header>
     <article class="container-layout banner"></article>
     <nav class="container-layout">
-      <ul>
+      <ul class="nav_list">
         <li class="active">
           <button>일기 보관함</button>
         </li>
@@ -20,16 +21,60 @@
           <button>사진 보관함</button>
         </li>
       </ul>
+      <div class="selectWrap" id="cusotmSelect">
+        <button id="selectBtn">
+          <p id="selectedValue">전체</p>
+          <img src="./public/icons/down_fill_light_m.svg" alt="" />
+        </button>
+        <ul id="optionList" class="hidden">
+          <li class="option">
+            <button id="all_option" class="selected" value="all">
+              <img src="./public/icons/check_outline_light_xs.svg" alt="" />
+              <p>전체</p>
+            </button>
+          </li>
+          <li class="option">
+            <button id="happy_option" value="happy">
+              <img src="./public/icons/check_outline_light_xs.svg" alt="" />
+              <p>행복해요</p>
+            </button>
+          </li>
+          <li class="option">
+            <button id="sad_option" value="sad">
+              <img src="./public/icons/check_outline_light_xs.svg" alt="" />
+              <p>슬퍼요</p>
+            </button>
+          </li>
+          <li class="option">
+            <button id="surprised_option" value="surprised">
+              <img src="./public/icons/check_outline_light_xs.svg" alt="" />
+              <p>놀랐어요</p>
+            </button>
+          </li>
+          <li class="option">
+            <button id="angry_option" value="angry">
+              <img src="./public/icons/check_outline_light_xs.svg" alt="" />
+              <p>화나요</p>
+            </button>
+          </li>
+          <li class="option">
+            <button id="etc_option" value="etc">
+              <img src="./public/icons/check_outline_light_xs.svg" alt="" />
+              <p>기타</p>
+            </button>
+          </li>
+        </ul>
+      </div>
     </nav>
     <main class="container-layout">
       <div class="main-content">
         <ul id="diaryList">
-          <li class="add-list-alert">등록된 일기가 없습니다.</li>
+          <li id="add-list-alert" class="active">등록된 일기가 없습니다.</li>
         </ul>
       </div>
       <aside>
         <h2>📍 일기 쓰기</h2>
-        <form id="diaryForm" onsubmit="addDiary(event); false;">
+        <form id="diaryForm" onsubmit="onAddDiary(event); false;">
           <h4>오늘 기분은 어땠나요?</h4>
           <div class="feeling-radio-wrap">
             <p>
