--- a/diaryDetail.html
+++ b/diaryDetail.html
@@ -82,7 +82,7 @@
           <div class="buttons-container">
             <button type="button" id="cancelBtn">취소</button>
             <button type="button" id="submitBtn" class="none" disabled>
-              등록하기
+              수정완료
             </button>
           </div>
         </form>
