[240901] 박진태 Day05 과제

--- a/homework/index.html
+++ b/homework/index.html
@@ -1,85 +1,107 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <title>일기보관함 실습</title>
+  <title>일기장 목록 페이지</title>
   <link rel="stylesheet" href="./index.css">
+  <script src="./index.js"></script>
 </head>
 <body>
   <div class="container">
+    <!-- 웹페이지 최상단부 -->
     <div class="header">
       <div id="header-name">진태의 다이어리</div>
       <img src="./asset/Rectangle 1.jpg" alt="">
     </div>
-    <div class="title-list">
-      <div id="dairy-title">일기보관함</div>
-      <div id="gallery-title">사진보관함</div>
+
+    <!-- 웹페이지 상단부 -->
+    <div class="nav">
+      <div class="title-list">
+        <div id="dairy-title">일기보관함</div>
+        <div id="gallery-title">사진보관함</div>
+      </div>
+      <div class="mood-selection-wrapper">
+        <select class="mood-selection">
+          <option selected="true" disabled="true" value="all">전체</option>
+          <option value="happy">행복해요</option>
+          <option value="sad">슬퍼요</option>
+          <option value="surprised">놀랐어요</option>
+          <option value="upset">화나요</option>
+          <option value="etc">기타</option>
+        </select>
+      </div>
     </div>
+
+    <!-- 웹페이지 중앙부 -->
     <div class="body">
       <div id="dairy-list">
-        <div class="dairy">
-          <!-- mood 사진 -->
-          <div class="mood-img">
-            <img src="./asset/행복해요.jpg" alt="행복한기분">
-          </div>
-          <!-- 텍스트상자 -->
-          <div class="daiary-summary-wrapper">
-            <!-- 기분설명 및 날짜 -->
-            <div class="daiary-summary">
-              <div class="mood-detail">행복해요</div>
-              <div class="created-date">2024.03.12</div>
+
+        <div onclick="onClickDairy()" class="dairy">
+          <a href="/homework/detail.html">
+            <!-- mood 사진 -->
+            <div class="mood-img">
+              <img src="./asset/행복해요.jpg" alt="행복한기분">
             </div>
-            <!-- 미니타이틀 -->
-            <div class="mini-title">미니타이틀 한 줄 입니다.</div>
-          </div>
+            <!-- 텍스트상자 -->
+            <div class="daiary-summary-wrapper">
+              <!-- 기분설명 및 날짜 -->
+              <div class="daiary-summary">
+                <div class="mood-행복해요">행복해요</div>
+                <div class="created-at">2024.03.12</div>
+              </div>
+              <!-- 나의 타이틀 -->
+              <div class="my-title">나의 타이틀 한 줄 입니다.</div>
+            </div>
+          </a>
         </div>
 
-        <div class="dairy">
-          <!-- mood 사진 -->
-          <div class="mood-img">
-            <img src="./asset/행복해요.jpg" alt="행복한기분">
-          </div>
-          <!-- 텍스트상자 -->
-          <div class="daiary-summary-wrapper">
-            <!-- 기분설명 및 날짜 -->
-            <div class="daiary-summary">
-              <div class="mood-detail">행복해요</div>
-              <div class="created-date">2024.03.12</div>
-            </div>
-            <!-- 미니타이틀 -->
-            <div class="mini-title">미니타이틀 한 줄 입니다.</div>
-          </div>
-        </div>
-
-        <div class="dairy">
-          <!-- mood 사진 -->
-          <div class="mood-img">
-            <img src="./asset/행복해요.jpg" alt="행복한기분">
-          </div>
-          <!-- 텍스트상자 -->
-          <div class="daiary-summary-wrapper">
-            <!-- 기분설명 및 날짜 -->
-            <div class="daiary-summary">
-              <div class="mood-detail">행복해요</div>
-              <div class="created-date">2024.03.12</div>
-            </div>
-            <!-- 미니타이틀 -->
-            <div class="mini-title">미니타이틀 한 줄 입니다.</div>
-          </div>
-        </div>
-        
-        <!-- <div class="dairy-row">
-          <div class="dairy">일기5</div>
-          <div class="dairy">일기6</div>
-        </div> -->
-        <!-- <div class="dairy-row">
-          <div class="dairy">일기5</div>
-          <div class="dairy">일기6</div>
-        </div> -->
       </div>
+
+      <!-- 다이어리 생성기 -->
       <div id="dairy-generator">
-        일기쓰기
+        <div id="generator-header">📍일기쓰기</div>
+        <div id="generator-body">
+          <div id="mood-radio">
+            <div id="mood-question-title">오늘 기분은 어땟나요?</div>
+            <div id="mood-radio-area">
+              <div class="mood-radio-instance">
+                <input type="radio" name="mood" id="행복해요"><label for="행복해요">행복해요</label>
+              </div>
+              <div class="mood-radio-instance">
+                <input type="radio" name="mood" id="슬퍼요"><label for="슬퍼요">슬퍼요</label>
+              </div>
+              <div class="mood-radio-instance">
+                <input type="radio" name="mood" id="놀랐어요"><label for="놀랐어요">놀랐어요</label>
+              </div>
+              <div class="mood-radio-instance">
+                <input type="radio" name="mood" id="화나요"><label for="화나요">화나요</label>
+              </div>
+              <div class="mood-radio-instance">
+                <input type="radio" name="mood" id="기타"><label for="기타">기타</label>
+              </div>
+            </div>
+          </div>
+          
+          <!-- 텍스트 영역 -->
+          <div id="mood-text-area">
+            <div class="mood-textbox">
+              <div class="mood-textbox-heading">제목</div>
+              <input class="mood-textbox-input" type="text" placeholder="제목을 입력해 주세요.">
+            </div>
+            <div class="mood-textbox">
+              <div class="mood-textbox-heading">내용</div>
+              <input class="mood-textbox-input" type="text" placeholder="내용을 입력해 주세요.">
+            </div>
+          </div>
+        </div>
+
+        <!-- 버튼 영역 -->
+        <div id="generator-footer">
+          <button onclick="onClickButton()" id="gen-dairy-btn">등록하기</button>
+        </div>
       </div>
     </div>
+
+    <!-- 웹페이지 하단부 -->
     <div class="footer">
       <div class="detail-wrapper">
         <div id="다이어리주인장">박진태</div>
