--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -19,10 +19,30 @@
               class="header_img"
             />
           </div>
-          <div class="navigation">
-            <div class="navigation_menu">
-              <div class="diary_storage_menu">일기보관함</div>
-              <div class="photo_storage_menu">사진보관함</div>
+          <div class="navigation_layout">
+            <div class="navigation">
+              <div class="navigation_menu">
+                <div class="diary_storage_menu">일기보관함</div>
+                <div class="photo_storage_menu">사진보관함</div>
+              </div>
+            </div>
+            <div class="sub_navigation">
+              <div class="emotion_dropdown_layout">
+                <div class="dropdown_name">
+                  <div class="dropdown_name_none_hover">
+                    전체
+                    <img src="./image/dropdown_arrow.svg" width="24px" />
+                  </div>
+                  <div class="dropdown_name_hover">????</div>
+                  <ul>
+                    <li value="happy"><a href="#">행복해요</a></li>
+                    <li value="happy"><a href="#">슬퍼요</a></li>
+                    <li value="happy"><a href="#">놀랐어요</a></li>
+                    <li value="happy"><a href="#">화나요</a></li>
+                    <li value="happy"><a href="#">기타</a></li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
           <div class="main">
