feat: 기분 필터링 기능 구현

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -34,19 +34,20 @@
                     <img src="./image/dropdown_arrow.svg" width="24px" />
                   </div>
                   <div class="dropdown_name_hover">????</div>
-                  <ul>
-                    <li value="happy"><a href="#">행복해요</a></li>
-                    <li value="happy"><a href="#">슬퍼요</a></li>
-                    <li value="happy"><a href="#">놀랐어요</a></li>
-                    <li value="happy"><a href="#">화나요</a></li>
-                    <li value="happy"><a href="#">기타</a></li>
+                  <ul id="mood_list">
+                    <li><a href="#">행복해요</a></li>
+                    <li><a href="#">슬퍼요</a></li>
+                    <li><a href="#">놀랐어요</a></li>
+                    <li><a href="#">화나요</a></li>
+                    <li><a href="#">기타</a></li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
           <div class="main">
-            <div class="article" id="article"></div>
+            <div class="article" id="article">
+            </div>
             <div class="aside">
               <div class="diary_entry_title">📍 일기 쓰기</div>
               <div class="diary_entry_form">
