design: dropdown border-radius 수정

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -39,7 +39,7 @@
                     <li><a href="#">슬퍼요</a></li>
                     <li><a href="#">놀랐어요</a></li>
                     <li><a href="#">화나요</a></li>
-                    <li><a href="#">기타</a></li>
+                    <li class="etc"><a href="#">기타</a></li>
                   </ul>
                 </div>
               </div>
