--- a/homework/note.html
+++ b/homework/note.html
@@ -4,13 +4,15 @@
 <head>
     <title>Note</title>
     <script>
-        
+        // let write = () => {
+        //     document.getElementById("title").innerText = {name}
+        // }
     </script>
 </head>
 <body>
-    <header>
+    <!-- <header>
         <h1>일기보관함_메인</h1>
-    </header>
+    </header> -->
     <div class="content">
         <div class="name">
             <b>민지의 다이어리</b>
@@ -24,115 +26,133 @@
                 <a href="#" class="no_select">사진보관함</a>
             </div>
         </div>
-        <div class="content_box">
-            <div class="content1">
-                <div class="content_bg"></div>
-                <div class="content_bt">
-                    <div class="emotion">
-                        <p>슬퍼요</p>
-                        <p>2024.03.12</p>
+        <div class="diary_select_bg">
+            <div class="diary_select">
+                <select onchange="(event)">
+                    <option>전체</option>
+                    <option value="happy">행복해요</option>
+                    <option value="sad">슬퍼요</option>
+                    <option value="sup">놀랐어요</option>
+                    <option value="angry">화나요</option>
+                    <option value="etc">기타</option>
+                </select>
+            </div>
+        </div>
+        <div class="diary">
+            <div class="content_bg">
+                <div class="content_box">
+                    <div class="content1 content_trans">
+                        <div class="content_box_bg"></div>
+                        <div class="content_bt">
+                            <div class="emotion">
+                                <p>슬퍼요</p>
+                                <p>2024.03.12</p>
+                            </div>
+                            <div class="content_title">
+                                <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="content_title">
-                        <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                    <div class="content2 content_trans">
+                        <div class="content_box_bg"></div>
+                        <div class="content_bt">
+                            <div class="emotion">
+                                <p>슬퍼요</p>
+                                <p>2024.03.12</p>
+                            </div>
+                            <div class="content_title">
+                                <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content3 content_trans">
+                        <div class="content_box_bg"></div>
+                        <div class="content_bt">
+                            <div class="emotion">
+                                <p>슬퍼요</p>
+                                <p>2024.03.12</p>
+                            </div>
+                            <div class="content_title">
+                                <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content4 content_trans">
+                        <div class="content_box_bg"></div>
+                        <div class="content_bt">
+                            <div class="emotion">
+                                <p>슬퍼요</p>
+                                <p>2024.03.12</p>
+                            </div>
+                            <div class="content_title">
+                                <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content5 content_trans">
+                        <div class="content_box_bg"></div>
+                        <div class="content_bt">
+                            <div class="emotion">
+                                <p>슬퍼요</p>
+                                <p>2024.03.12</p>
+                            </div>
+                            <div class="content_title">
+                                <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content6 content_trans">
+                        <div class="content_box_bg"></div>
+                        <div class="content_bt">
+                            <div class="emotion">
+                                <p>슬퍼요</p>
+                                <p>2024.03.12</p>
+                            </div>
+                            <div class="content_title">
+                                <p id="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="content2">
-                <div class="content_bg"></div>
-                <div class="content_bt">
-                    <div class="emotion">
-                        <p>슬퍼요</p>
-                        <p>2024.03.12</p>
+            <div class="write_bg">
+                <div class="write">
+                    <h3><img src="/homework/img/📍 일기 쓰기.png"></img></h3>
+                    <div class="em_title">
+                        <p>오늘 기분은 어땠나요?</p>
                     </div>
-                    <div class="content_title">
-                        <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                    <div class="em_menu">
+                        <div>
+                            <input type="radio" name="emotion">행복해요
+                        </div>
+                        <div>
+                            <input type="radio" name="emotion">슬퍼요
+                        </div>
+                        <div>
+                            <input type="radio" name="emotion">놀랐어요
+                        </div>
+                        <div>
+                            <input type="radio" name="emotion">화나요
+                        </div>
+                        <div>
+                            <input type="radio" name="emotion">기타
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="content3">
-                <div class="content_bg"></div>
-                <div class="content_bt">
-                    <div class="emotion">
-                        <p>슬퍼요</p>
-                        <p>2024.03.12</p>
+                    <div class="write_title">
+                        <p>제목</p>
+                        <input type="text" placeholder="제목을 입력해 주세요.">
                     </div>
-                    <div class="content_title">
-                        <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
+                    <div class="write_memo">
+                        <p>내용</p>
+                        <input type="text" placeholder="내용을 입력해 주세요.">
                     </div>
-                </div>
-            </div>
-            <div class="content4">
-                <div class="content_bg"></div>
-                <div class="content_bt">
-                    <div class="emotion">
-                        <p>슬퍼요</p>
-                        <p>2024.03.12</p>
+                    <div class="write_btn">
+                        <button onclick="wrtie">등록하기</button>
                     </div>
-                    <div class="content_title">
-                        <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="content5">
-                <div class="content_bg"></div>
-                <div class="content_bt">
-                    <div class="emotion">
-                        <p>슬퍼요</p>
-                        <p>2024.03.12</p>
-                    </div>
-                    <div class="content_title">
-                        <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="content6">
-                <div class="content_bg"></div>
-                <div class="content_bt">
-                    <div class="emotion">
-                        <p>슬퍼요</p>
-                        <p>2024.03.12</p>
-                    </div>
-                    <div class="content_title">
-                        <p>타이틀 영역입니다. 한줄까지만 노출됩니다.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="write">
-                <h3><img src="/homework/img/📍 일기 쓰기.png"></img></h3>
-                <div class="em_title">
-                    <p>오늘 기분은 어땠나요?</p>
-                </div>
-                <div class="em_menu">
-                    <div>
-                        <input type="radio" name="emotion">행복해요
-                    </div>
-                    <div>
-                        <input type="radio" name="emotion">슬퍼요
-                    </div>
-                    <div>
-                        <input type="radio" name="emotion">놀랐어요
-                    </div>
-                    <div>
-                        <input type="radio" name="emotion">화나요
-                    </div>
-                    <div>
-                        <input type="radio" name="emotion">기타
-                    </div>
-                </div>
-                <div class="write_title">
-                    <p>제목</p>
-                    <input type="text" placeholder="제목을 입력해 주세요.">
-                </div>
-                <div class="write_memo">
-                    <p>내용</p>
-                    <input type="text" placeholder="내용을 입력해 주세요.">
-                </div>
-                <div class="write_btn">
-                    <button>등록하기</button>
                 </div>
             </div>
         </div>
-    </div>
+        </div>
     <footer>
         <div class="ft_bg">
             <div>
