--- a/다이어리/diary-edit.html
+++ b/다이어리/diary-edit.html
@@ -68,22 +68,26 @@
             <div class="title_layout">
               <div class="title">제목</div>
               <div class="title_edit_layout">
-                <input type="text" class="title_edit_input" placeholder="제목을 입력해 주세요.">
+                <input type="text" id="title_edit_input" placeholder="제목을 입력해 주세요.">
               </div>
             </div>
             <div class="content_layout">
               <div class="content_title">내용</div>
               <div class="content_edit_layout">
                 <textarea
-                  class="content_edit_input"
+                  id="content_edit_input"
                   type="text"
                   placeholder="내용을 입력해 주세요."
                 ></textarea>
               </div>
             </div>
             <div class="button_layout">
-              <button class="button" id="cancel_button">취소</button>
-              <button class="button" id="edit_button">수정 하기</button>
+              <a href="" id="cancel">
+                <button class="button" id="cancel_button">취소</button>
+              </a>
+              <a href="" id="edit">
+                <button class="button" id="edit_button">수정 하기</button>
+              </a>
             </div>
           </div>
         </div>
