--- a/다이어리/diary-detail.html
+++ b/다이어리/diary-detail.html
@@ -9,7 +9,9 @@
       <div class="layout">
         <div class="header">
           <div class="header_frame">
-            <div class="logo">예슬이의 다이어리</div>
+            <a href="./diary.html">
+              <div class="logo">예슬이의 다이어리</div>
+            </a>
           </div>
         </div>
         <div class="main" id="main">
