style: 코드 정렬 및 레이아웃 조정

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -46,8 +46,7 @@
             </div>
           </div>
           <div class="main">
-            <div class="article" id="article">
-            </div>
+            <div class="article" id="article"></div>
             <div class="aside">
               <div class="diary_entry_title">📍 일기 쓰기</div>
               <div class="diary_entry_form">
@@ -60,7 +59,9 @@
                         id="check_happy"
                         class="mood_options"
                         name="mood"
-                      /><label for="check_happy" class="mood_text">행복해요</label>
+                      /><label for="check_happy" class="mood_text"
+                        >행복해요</label
+                      >
                     </div>
                     <div class="mood_checkbox">
                       <input
