[240902] section02 일기목록 부분 구현 완료

--- a/css-js/homework/diary-savor/diary-saver.html
+++ b/css-js/homework/diary-savor/diary-saver.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diary Saver</title>
     <link rel="stylesheet" href="./diary-saver.css" />
   </head>
@@ -16,6 +14,24 @@
         <div class="menu">
           <button>일기보관함</button>
           <button>사진보관함</button>
+        </div>
+        <div class="">
+          <div class="">
+            <div class="">
+              <select>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+              </select>
+            </div>
+            <input />
+          </div>
+          <div>
+            <!-- 드롭다운 -->
+          </div>
         </div>
         <div class="main-container">
           <div class="board">
