[240902]필수과제 DAY5 과제제출

--- a/homework/diary.html
+++ b/homework/diary.html
@@ -10,7 +10,7 @@
 <body>
 
      <div class="diarycontainer">
-        <div class="whosisdiary">민지의다이어리</div>
+        <div class="whoesdiary">민지의다이어리</div>
     </div>
 
     <div class="bannerimgcontainer">
@@ -21,6 +21,17 @@
         <div class="menubox">
             <div class="menu_active"><div class="menu">일기보관함</div></div>
             <div class="menu_inactive"><div class="menu">사진보관함</div></div>
+        </div>
+    </div>
+    <div class="selectcontainer">
+        <div class="selectbox">        
+            <select>
+            <option>전체</option>
+            <option>행복해요</option>
+            <option>슬퍼요</option>
+            <option>놀랐어요</option>
+            <option>기타</option>
+            </select>
         </div>
     </div>
 
@@ -139,15 +150,17 @@
                     <button class="submit" onclick="submit()">등록하기</button>
                 </div>
             </div>
+            
         </div>
-
-        <div class="footer">
-            <div class="footercontainer">
-                <div class="footerwhoisdiary">민지의 다이어리</div>
-                <div class="representative">대표: (name)</div>
-                <div class="companyinfo">Copyright © 2024. {name} Co., Ltd.</div>
-        </div>
-    </div>
     
+    </div>
+    <div class="footer">
+        <div class="footercontainer">
+            <div class="footerwhosediary">민지의 다이어리</div>
+            <div class="representative">대표: (name)</div>
+            <div class="companyinfo">Copyright © 2024. {name} Co., Ltd.</div>
+        </div>
+    </div>    
+
 </body>
 </html>
