--- a/homework/homework2.html
+++ b/homework/homework2.html
@@ -5,128 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework2</title>
     <link rel="stylesheet" href="./homework2.css" />
-    <script src="./homework2.js"></script>
+    <script src="./homework2.js" defer></script>
   </head>
+
   <body>
     <div class="wrapper">
+      <!-- 헤더 -->
       <header>
         <div class="header-content">민지의 다이어리</div>
       </header>
       <main>
+        <!-- 배너 -->
         <div class="banner-area">
           <img src="./assets/banner.png" alt="banner" />
         </div>
+
+        <!-- 메인 컨탠츠 -->
         <div class="all-contents-area">
-          <div class="contents-area">
-            <div class="contents">
-              <div class="navigate">
-                <div class="diary">일기보관함</div>
-                <div class="photo">사진보관함</div>
+          <div class="contents">
+            <!-- 탭 버튼 -->
+            <div class="navigate">
+              <div class="tab__item active">
+                <div class="diary" id="tab1" onclick="tab()">일기보관함</div>
               </div>
+              <div class="tab__item">
+                <div class="photo" id="tab2" onclick="tab()">사진보관함</div>
+              </div>
+            </div>
+
+            <!-- 일기보관함 -->
+            <div id="tab1" class="tab__content active">
               <div class="album-area">
+                <!-- 일기 아이템들 -->
                 <div class="album-wrap">
-                <div class="library">
-                  <div class="one-album">
-                    <img class="thumbnail" src="./assets/Frame-sad.png" />
-                    <div class="album-text">
-                      <div class="album-text-up">
-                        <div class="feeling">슬퍼요</div>
-                        <div class="date">2024.08.29</div>
-                      </div>
-                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
-                    </div>
+                  <div id="filterBox">
+                    <select name="emotionFilter" id="emotionFilter" onchange="LoadItem(event)">
+                      <option value="all">선택하세요</option>
+                      <option value="happy">행복해요</option>
+                      <option value="sad">슬퍼요</option>
+                      <option value="surprise">놀랐어요</option>
+                      <option value="mad">화나요</option>
+                      <option value="etc">기타</option>
+                    </select>
                   </div>
-                  <div class="one-album">
-                    <img class="thumbnail" src="./assets/Frame-sad.png" />
-                    <div class="album-text">
-                      <div class="album-text-up">
-                        <div class="feeling">슬퍼요</div>
-                        <div class="date">2024.08.29</div>
-                      </div>
-                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
-                    </div>
-                  </div>
-                  <div class="one-album">
-                    <img class="thumbnail" src="./assets/Frame-sad.png" />
-                    <div class="album-text">
-                      <div class="album-text-up">
-                        <div class="feeling">슬퍼요</div>
-                        <div class="date">2024.08.29</div>
-                      </div>
-                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
-                    </div>
-                  </div>
-                  <div class="one-album">
-                    <img class="thumbnail"src="./assets/Frame-sad.png"  />
-                    <div class="album-text">
-                      <div class="album-text-up">
-                        <div class="feeling">슬퍼요</div>
-                        <div class="date">2024.08.29</div>
-                      </div>
-                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
-                    </div>
-                  </div>
-                  <div class="one-album">
-                    <img class="thumbnail" src="./assets/Frame-sad.png" />
-                    <div class="album-text">
-                      <div class="album-text-up">
-                        <div class="feeling">슬퍼요</div>
-                        <div class="date">2024.08.29</div>
-                      </div>
-                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
-                    </div>
-                  </div>
-                  <div class="one-album">
-                    <img class="thumbnail"src="./assets/Frame-sad.png"  />
-                    <div class="album-text">
-                      <div class="album-text-up">
-                        <div class="feeling">슬퍼요</div>
-                        <div class="date">2024.08.29</div>
-                      </div>
-                      <div class="title">타이틀 영역입니다. 한줄까지만 노출됩니다.</div>
-                    </div>
-                  </div>
-                  </div>
+                  <div id="library"></div>
                 </div>
+                <!-- 일기 작성 폼 -->
                 <div class="write-area">
-                  <div class="write-title-area">
-                    <div class="write-title">
-                    📍 일기 쓰기
+                  <div class="write-cover">
+                    <div class="write-title-area">
+                      <div class="write-title">📍 일기 쓰기</div>
+                    </div>
+                    <div class="hows-feeling-area">
+                      <div class="feeling-title-area">
+                        <div class="feeling-title">오늘 기분은 어땠나요?</div>
+                      </div>
+                      <div class="feeling-choose">
+                        <input type="radio" name="feeling" id="happy" /> <label for="happy">행복해요</label>
+                        <input type="radio" name="feeling" id="sad" /> <label for="sad">슬퍼요</label>
+                        <input type="radio" name="feeling" id="surprise" /> <label for="surprise">놀랐어요</label>
+                        <input type="radio" name="feeling" id="mad" /> <label for="mad">화나요</label>
+                        <input type="radio" name="feeling" id="etc" /> <label for="etc">기타</label>
+                      </div>
+                    </div>
+                    <div class="text-area">
+                      <div class="text-area-title">
+                        <div>제목</div>
+                        <input type="text" placeholder="제목을 입력해 주세요." id="title" />
+                      </div>
+                      <div class="text-area-text">
+                        <div>내용</div>
+                        <textarea placeholder="내용을 입력해 주세요." id="body"></textarea>
+                      </div>
+                    </div>
+                    <div class="button-area">
+                      <button onclick="addItem()">등록하기</button>
                     </div>
                   </div>
-                  <div class="hows-feeling-area">
-                    <div class="feeling-title-area">
-                      <div class="feeling-title">오늘 기분은 어땠나요?</div>
-                    </div>
-                    <div class="feeling-choose">
-                      <input type="radio"> 행복해요
-                      <input type="radio"> 슬퍼요
-                      <input type="radio"> 놀랐어요
-                      <input type="radio"> 화나요
-                      <input type="radio"> 기타
-                    </div>
-                  </div>
-                  <div class="text-area">
-                    <div class="text-area-title">
-                      <div>제목</div>
-                      <input type="text" placeholder="제목을 입력해 주세요.">
-                    </div>
-                    <div class="text-area-text">
-                      <div>내용</div>
-                      <textarea placeholder="내용을 입력해 주세요."></textarea>
-                    </div>
-                  </div>
-                  <div class="button-area">
-                    <button disabled>등록하기</button>
-                  </div>
-                </div>
                 </div>
               </div>
+            </div>
+
+            <!-- 사진보관함 -->
+            <div id="tab2" class="tab__content">
+              <div class="photo-area">사진보관함 공간</div>
             </div>
           </div>
         </div>
       </main>
     </div>
+
+    <!-- 푸터 -->
     <footer>
       <div class="footer">
         <div class="footer-contents">
