Refactor: 불필요한 초기값 제거

--- a/diaryDetail.html
+++ b/diaryDetail.html
@@ -12,30 +12,17 @@
     <header class="container-layout"><h1>준수의 다이어리</h1></header>
     <main class="container-layout">
       <div id="view" class="view">
-        <h3 id="titleView">제목입력</h3>
+        <h3 id="titleView"></h3>
         <div class="infoContainer">
           <div id="feelingViewContainer">
             <div id="feeling_circle"></div>
-            <p id="feeling_text">행복해요</p>
+            <p id="feeling_text"></p>
           </div>
-          <p id="createdAtDate">2024.07.12 작성</p>
+          <p id="createdAtDate"></p>
         </div>
         <div id="contentViewContainer">
           <h4>내용</h4>
-          <p id="contentText">
-            내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다내용이 들어갑니다내용이 들어갑니다내용이
-            들어갑니다내용이 들어갑니다
-          </p>
+          <p id="contentText"></p>
         </div>
         <button id="detailEdit">수정</button>
       </div>
