[240902] JS: 일기수정 기능 구현

--- a/01-diary/detail/detail_update.html
+++ b/01-diary/detail/detail_update.html
@@ -33,7 +33,7 @@
             </div>
             <div class="update_contents_title_container">
                 <div class="update_contents_title">제목</div>
-                <input type="text" id="update_title_input">
+                <textarea id="update_contents_title">제목입니다.</textarea>
             </div>
             <div class="update_contents_text_container">
                 <div class="update_contents_title">내용</div>
