--- a/CSS&JS 마스터/일기보관함.html
+++ b/CSS&JS 마스터/일기보관함.html
@@ -62,7 +62,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="textBox"> <!--텍스트 박스-->
+                                <div class="textBox">
                                     <div class="titleBox">
                                         <label for="titleBox_input">제목</label>
                                         <input type="text" id="titleBox_input" placeholder="제목을 입력해주세요.">
