--- a/01-diary/detail/detail.html
+++ b/01-diary/detail/detail.html
@@ -8,7 +8,7 @@
 <body>
     <div class="root_container">
         <header class="header_container">
-            <div class="header_title">민지의 다이어리</div>
+            <a class="home_link" href="../index.html"><div class="header_title">민지의 다이어리</div></a>
         </header>
         <section class="section_container">
             <div class="main_contents_container">
