[240902] JS: 일기삭제 - 카드 위에 삭제 아이콘 겹쳐서 배치하기

--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -44,6 +44,7 @@
                 </div>
                 <div class="diary">
                     <img class="diary_mood_img" src="./assets/mood_happy.png" alt="웃는 얼굴 사진입니다.">
+                    <button class="diary_delete_button"><img src="./assets/delete_button.png" alt="X 삭제 버튼"></button>
                     <div class="diary_title">
                         <div class="diary_sub_title">
                             <div class="diary_mood_happy">행복해요</div>
