--- a/section01.html
+++ b/section01.html
@@ -1,114 +1,87 @@
 <!DOCTYPE html>
 <html lang="ko">
 	<head>
-		<title>일기보관함_메인</title>
-		<link href="./section01.css" rel="stylesheet" />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>다이어리 만들기</title>
+		<link rel="stylesheet" href="./section01.css" />
+		<script src="./section01.js"></script>
 	</head>
 	<body>
-		<div class="background">
-			<div class="outerbox">
-				<div class="wrapper">
-					<div class="wrapper__header">민지의 다이어리</div>
-					<img class="banner" src="./Rectangle 1.svg" />
-					<div class="tab">
-						<div class="diarystore">일기보관함</div>
-						<div class="photostore">사진보관함</div>
-					</div>
-					<div class="wrapper__body">
-						<div class="wrapper__left__body">
-							<div class="moodWrapper__item">
-								<img class="mood-thumbnail" src="./img/sad.png" />
-								<span class="mood-feel" id="sad">슬퍼요</span>
-								<span class="mood-date">2024. 03. 12</span>
-								<div class="mood-title">
-									타이틀 영역입니다. 한줄까지만 노출됩니다.
-								</div>
+		<div class="wrapper">
+			<div class="wrapper__header">
+				<div>민지의 다이어리</div>
+			</div>
+			<img class="banner" src="./Rectangle 1.svg" />
+
+			<div class="tab">
+				<div class="diarystore">일기보관함</div>
+				<div class="photostore">사진보관함</div>
+			</div>
+
+			<select class="filter" onchange="filter(event)">
+				<option selected>전체</option>
+				<option value="happy">행복해요</option>
+				<option value="sad">슬퍼요</option>
+				<option value="surprised">놀랐어요</option>
+				<option value="mad">화나요</option>
+				<option value="etc">기타</option>
+			</select>
+
+			<div class="wrapper__body">
+				<div id="wrapper__left__body" class="wrapper__left__body"></div>
+
+				<div class="wrapper__right__body">
+					<div class="diary">📍일기 쓰기</div>
+					<div class="diary-feel">
+						<div class="wrapper__right__body_ment">오늘 기분은 어땠나요?</div>
+						<div class="selectbox">
+							<div class="diary-select">
+								<input type="radio" name="feel" value="happy" />
+								<div>행복해요</div>
 							</div>
-							<div class="moodWrapper__item">
-								<img class="mood-thumbnail" src="./img/sad.png" />
-								<span class="mood-feel" id="mad">화나요</span>
-								<span class="mood-date">2024. 03. 12</span>
-								<div class="mood-title">
-									타이틀 영역입니다. 한줄까지만 노출됩니다.
-								</div>
+							<div class="diary-select">
+								<input type="radio" name="feel" value="sad" />
+								<div>슬퍼요</div>
 							</div>
-							<div class="moodWrapper__item">
-								<img class="mood-thumbnail" src="./img/etc.png" />
-								<span class="mood-feel" id="etc">기타</span>
-								<dispanv class="mood-date">2024. 03. 12</dispanv>
-								<div class="mood-title">
-									타이틀 영역입니다. 한줄까지만 노출됩니다.
-								</div>
+							<div class="diary-select">
+								<input type="radio" name="feel" value="surprised" />
+								<div>놀랐어요</div>
 							</div>
-							<div class="moodWrapper__item">
-								<img class="mood-thumbnail" src="./img/surprise.png" />
-								<span class="mood-feel" id="surprised">놀랐어요</span>
-								<span class="mood-date">2024. 03. 12</span>
-								<div class="mood-title">타이틀 영역입니다.</div>
+							<div class="diary-select">
+								<input type="radio" name="feel" value="mad" />
+								<div>화나요</div>
 							</div>
-							<div class="moodWrapper__item">
-								<img class="mood-thumbnail" src="./img/happy.png" />
-								<span class="mood-feel" id="happy">행복해요</span>
-								<span class="mood-date">2024. 03. 12</span>
-								<div class="mood-title">타이틀 영역입니다.</div>
-							</div>
-							<div class="moodWrapper__item">
-								<img class="mood-thumbnail" src="./img/happy.png" />
-								<span class="mood-feel" id="happy">행복해요</span>
-								<span class="mood-date">2024. 03. 12</span>
-								<div class="mood-title">타이틀 영역입니다.</div>
+							<div class="diary-select">
+								<input type="radio" name="feel" value="etc" />
+								<div>기타</div>
 							</div>
 						</div>
-						<div class="wrapper__right__body">
-							<!-- <div class="moodWrapper__item"> -->
-							<div class="diary">📍 일기 쓰기</div>
-							<div class="diary-feel">
-								오늘 기분은 어땠나요?
-								<div class="selectbox">
-									<span class="diary-select">
-										<input type="radio" name="feel" id="happy" />
-										<label for="happy">행복해요</label>
-									</span>
-									<span class="diary-select">
-										<input type="radio" name="feel" id="sad" />
-										<label for="happy">슬퍼요</label>
-									</span>
-									<span class="diary-select">
-										<input type="radio" name="feel" id="surprised" />
-										<label for="happy">놀랐어요</label>
-									</span>
-									<span class="diary-select">
-										<input type="radio" name="feel" id="mad" />
-										<label for="happy">화나요</label>
-									</span>
-									<span class="diary-select">
-										<input type="radio" name="feel" id="etc" />
-										<label for="happy">기타</label>
-									</span>
-								</div>
-								<div class="diary-title">제목</div>
-								<input
-									type="text"
-									id="title"
-									placeholder="제목을 입력해주세요."
-								/>
-								<div class="diary-content">내용</div>
-								<input
-									type="text"
-									id="content"
-									placeholder="내용을 입력해주세요."
-								/>
-							</div>
-							<button class="diary-submit" disabled>
-								<img class="submit" src="./버튼 영역.svg" />
-							</button>
-							<!-- </div> -->
+					</div>
+					<div class="writingBox">
+						<div class="diary-title">
+							<div>제목</div>
+							<input
+								type="text"
+								id="diary-title"
+								placeholder="제목을 입력해 주세요."
+							/>
+						</div>
+						<div class="diary-title">
+							<div>내용</div>
+							<textarea
+								id="diary-content"
+								placeholder="내용을 입력해 주세요."
+							></textarea>
 						</div>
 					</div>
-					<img class="wrapper__footer" src="./Footer.svg" />
+					<div>
+						<button class="diary-submit" onclick="write()">등록하기</button>
+					</div>
 				</div>
 			</div>
 		</div>
-		<script src="./section01.js"></script>
+
+		<img class="wrapper__footer" src="./Footer.svg" />
 	</body>
 </html>
