--- a/01-diary/detail/detail.html
+++ b/01-diary/detail/detail.html
@@ -32,7 +32,8 @@
                     <div id="detail_diary_text" class="main_contents_text">작성한 내용입니다.</div>
                 </div>
                 <div class="main_contents_button_container">
-                    <button class="update_button" onclick="updateButtonPressed()">수정</button>
+                    <button class="button_list" onclick="updateButtonPressed()">수정</button>
+                    <button class="button_list" onclick="deleteButtonPressed()">삭제</button>
                 </div>
             </div>
         </section>
