design: 스크롤 내릴 시, 필터 배경색 반전

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -28,7 +28,7 @@
           <div class="navigation_layout">
             <div class="sub_navigation">
               <div class="emotion_dropdown_layout">
-                <div class="dropdown_name">
+                <div class="dropdown_name" id="filterCheckbox">
                   <div class="dropdown_name_none_hover">
                     전체
                     <img src="./image/dropdown_arrow.svg" width="24px" />
