feat: 플로팅 버튼 클릭 시, 스크롤 맨 위로 올리는 기능 구현

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -131,6 +131,9 @@
               Copyright © 2024. 강예슬 Co., Ltd.
             </div>
           </div>
+          <div class="topScroll" onclick="upScroll()">
+            <img src="./image/topscroll.png" width="40px" />
+          </div>
         </div>
       </div>
     </div>
